Some interface style fixes

--- a/django_project/sass/_settings.scss
+++ b/django_project/sass/_settings.scss
@@ -1,4 +1,6 @@
 @charset "UTF-8";
 
 $navbar-height: rem-calc(45);
-$navbar-width: rem-calc(350);
+$navbar-width: rem-calc(345);
+
+$topbar-bg-color: #0097C6;
