--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -35,6 +35,7 @@
 <!-- MAP -->
 <div id='map'></div>
 <!-- END MAP -->
+<div id='toolbox'></div>
 <div id='resultsToolControl'></div>
 <div id='resultsToolControlAllVisible'></div>
 <div id='printControlPanel'></div>
