added image legend

--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -481,3 +481,9 @@ ul.ss-result {
       margin: 0;
   }
 }
+
+.search-chk {
+  padding: rem-calc(3) rem-calc(10);
+  text-transform: uppercase;
+  font-size: rem-calc(12);
+}
