--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -117,9 +117,12 @@
             letter-spacing: 3px;
             line-height: 16px;
             border: solid 1px #0097c6;
-          -webkit-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
-          -moz-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
-          box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+            // TODO: use compass for this
+            -webkit-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+            -moz-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+            box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+            // onmouse hover set cursor to pointer
+            cursor: pointer;
         }
 
         .show {
