Enable minimize/maxmize on panels

--- a/django_project/sass/_fa_fonts.scss
+++ b/django_project/sass/_fa_fonts.scss
@@ -14,3 +14,5 @@
 .#{$fa-css-prefix}-arrows-v:before { content: $fa-var-arrows-v; }
 .#{$fa-css-prefix}-print:before { content: $fa-var-print; }
 .#{$fa-css-prefix}-magic:before { content: $fa-var-magic; }
+.#{$fa-css-prefix}-chevron-up:before { content: $fa-var-chevron-up; }
+.#{$fa-css-prefix}-chevron-down:before { content: $fa-var-chevron-down; }
