--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -176,6 +176,16 @@
         .close-icon:hover {
             color: #0097c6;
         }
+
+        .toggle-icon {
+            position: absolute;
+            top: 5px;
+            right: 20px;
+        }
+
+        .toggle-icon:hover {
+            color: #0097c6;
+        }
     }
 
     .content {
